<?xml version="1.0"?>
<package>
  <name>ieee2014_maestro</name>
  <version>0.0.0</version>
  <description>The ieee2014_maestro package</description>

  <maintainer email="mason@todo.todo">mason</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
