<?xml version="1.0"?>
<package>
  <name>joystick_command_dynamixel</name>
  <version>0.0.0</version>
  <description>The joystick_command_dynamixel package</description>

  <maintainer email="khaledjhassan@ufl.edu">Khaled Hassan</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
